tests/ui/impl-trait/apit/arg-position-impl-trait-too-long.stderr
error[E0308]: mismatched types
  --> $DIR/arg-position-impl-trait-too-long.rs:18:9
   |
LL |       y: impl FnOnce(
   |  ________-
LL | |         &mut Header,
LL | |         &mut [EntryMetadata],
LL | |         &mut [Entry<C::EncodedKey, C::EncodedValue>]
LL | |     ) -> R,
   | |__________- expected this type parameter
LL |   ) {
LL |       let () = y;
   |           ^^   - this expression has type `impl FnOnce(&mut Header, &mut [EntryMetadata], &mut [Entry<C::EncodedKey, C::EncodedValue>]) -> R`
   |           |
   |           expected type parameter `impl FnOnce(&mut Header, &mut [EntryMetadata], &mut [Entry<C::EncodedKey, C::EncodedValue>]) -> R`, found `()`
   |
   = note: expected type parameter `impl FnOnce(&mut Header, &mut [EntryMetadata], &mut [Entry<C::EncodedKey, C::EncodedValue>]) -> R`
                   found unit type `()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
